Added new feature to Add more registers to existing project